package buildrun.roadeye.rest.dto;

public record LoginRequest(String login, String password) {
}
